--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -29,6 +29,7 @@
 				<containers:WorkArea id="workArea"
 					horizontalScrollPolicy="off" verticalScrollPolicy="off"
 					visible="false"
+					pageId = "{dataManager.currentPageId}"
 					dataProvider="{dataManager.currentObject}" />
 					
 				<containers:XMLPresentationEditor id="xmlEditor" />
