--- a/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
+++ b/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
@@ -9,7 +9,7 @@
 	show="showHandler();"
 	hide="hideHandler();"
 	
-	width="100%" height="100%" verticalGap="2">
+	width="100%" height="100%" verticalGap="2" xmlns:createApplication="vdom.components.createApplication.*">
 	
 	<mx:Script source="includes/applicationManagment.as" />
 			
@@ -20,7 +20,8 @@
 		
 		<controls:ActionButton styleName="newsButton"
 			label="{resourceManager.getString('Application','main_new')}"
-			labelPlacement="bottom"/>
+			labelPlacement="bottom"
+			click="mainViewStack.selectedChild = createApplicationCanvas"/>
 		
 		<controls:ActionButton styleName="newsButton"
 			label="{resourceManager.getString('Application','main_steps')}"
@@ -52,6 +53,9 @@
 			visible="true" height="86" dropShadowEnabled="false"/>
 		
 	</controls:ControlPanel>
+	<mx:ViewStack id="mainViewStack" width="100%" height="100%">
+		<main:Main id="mainCanvas" styleName="mainCanvas" width="100%" height="100%"  />
+		<createApplication:CreateApplication id="createApplicationCanvas" width="100%" height="100%" />
+	</mx:ViewStack>
 	
-	<main:Main id="mainCanvas" styleName="mainCanvas" width="100%" height="100%"  />
 </mx:VBox>
