git-svn-id: http://svn.vdombox.ru/flextools/trunk@1237 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -28,9 +28,7 @@
 				
 				<containers:WorkArea id="workArea"
 					horizontalScrollPolicy="off" verticalScrollPolicy="off"
-					visible="false"
-					pageId = "{dataManager.currentPageId}"
-					dataProvider="{dataManager.currentObject}" />
+					visible="false" />
 					
 				<containers:XMLPresentationEditor id="xmlEditor" />
 				
