--- a/IDE/Vdom/vdom/containers/ApplicationInformation.mxml
+++ b/IDE/Vdom/vdom/containers/ApplicationInformation.mxml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ActionPanel xmlns="vdom.containers.*" xmlns:mx="http://www.adobe.com/2006/mxml">
+<ActionPanel xmlns="vdom.containers.*" xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute">
 	<mx:Script>
 		<![CDATA[
 			public function set dataProvider(xml:XML):void {
 				
-				//applicationName.text = xml.
+				if(xml) {
+					applicationName.text = xml.name.toString();
+					applicationPage.text = xml.NumberOfPages.toString();
+					applicationObjects.text = xml.NumberOfObjects.toString();
+				}
 			}
 		]]>
 	</mx:Script>
-	<mx:HBox width="100%">
-		<mx:Label text="Name: "/>
-		<mx:Label width="200" id="applicationName"/>
-	</mx:HBox>
-	<mx:HBox width="100%">
-		<mx:Label text="Description: "/>
-		<mx:Text height="50" width="200" id="applicationDescription"/>
-	</mx:HBox>
+	<mx:Canvas width="50" height="50" x="0" y="0" backgroundColor="#4AEA61" borderStyle="none">
+	</mx:Canvas>
+	<mx:Label width="100" id="applicationName" y="50" height="15"/>
+	<mx:Label width="51" y="0" x="58" text="Pages" textAlign="right"/>
+	<mx:Label width="51" y="17" x="58" text="Objects" textAlign="right"/>
+	<mx:Label width="41" id="applicationPage" y="0" height="15" x="117"/>
+	<mx:Label width="41" id="applicationObjects" y="17" height="15" x="117"/>
 </ActionPanel>
