--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -2,10 +2,11 @@
 <mx:TitleWindow 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	layout="absolute" width="640" height="480"
-	title="Resource Manager"  
+	title="Resource Manager"
+	creationComplete="{creationComplete();}"  
 	>
 	
-	<mx:Script source="ResourceBrowser.as" />
+	<mx:Script source="FormController.as" />
 	
 	<mx:VBox 
 		width="100%" height="100%"
@@ -21,6 +22,9 @@
 		<mx:Button width="100%" label="Browse / Add" />	
 		</mx:VBox>
 		<mx:Canvas width="100%" height="100%" />		
+	</mx:HBox>
+	<mx:HBox width="100%" horizontalAlign="right">
+		<mx:Button label="Done" click="{PopUpManager.removePopUp(this);}" />
 	</mx:HBox>
 	</mx:VBox>
 </mx:TitleWindow>
