git-svn-id: http://svn.vdombox.ru/flextools/trunk@1265 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/createApplication/CreateApplication.mxml
+++ b/IDE/Vdom/vdom/components/createApplication/CreateApplication.mxml
@@ -3,11 +3,13 @@
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	
 	creationComplete="creationCompleteHandler();"
-	show="showHandler();">
+	show="showHandler();"
+	hide="hideHandler();">
 
 	<mx:Script source="includes/createApplication.as" />
 	
-	<mx:Form x="10" y="10">
+	<mx:Form id="createApplicationForm" 
+		x="10" y="10" >
 		<mx:FormHeading label="Create Application"/>
 		<mx:FormItem label="Name">
 			<mx:TextInput id="applicationName"/>
