fixed same error in "delete line Button"
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1295 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -89,7 +89,7 @@
 					delete massLines[level][frsTrElem][sknTrElem];
 				}
 				
-		btLine.alpha = 0.5;
+		//btLine.alpha = 0.5;
 		btLine.visible = false;
 		// delete Elements
 		for (var obID:String in massTreeElements)
@@ -244,7 +244,7 @@
 							//*	cnvLevelDown.removeChild(massLines[level][frsTrElem][sknTrElem]);
 								main.removeChild(massLines[level][frsTrElem][sknTrElem]);
 								delete massLines[level][frsTrElem][sknTrElem];
-								btLine.alpha = 0.5;
+							//	btLine.alpha = 0.5;
 								btLine.visible = false;
 							}
 	}
@@ -379,7 +379,7 @@
 	private function treeElementLinesReDrawHandler(trEvt:TreeEditorEvent):void
 	{
 		if(trEvt.currentTarget.ID != null)
-			redrawLines(trEvt.currentTarget.ID);
+			redrawLines(trEvt.currentTarget.ID); 
 		//trace(trEvt.currentTarget.ID)
 	}
 	
