--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -24,7 +24,7 @@
 		
 		<mx:VBox id="main" width="100%" bottom="0" height="100%">
 		
-			<mainContainers:AdvancedTabNavigator width="100%" height="100%" borderStyle="none">			
+			<mainContainers:AdvancedTabNavigator id="mainArea" width="100%" height="100%" borderStyle="none">			
 				
 				<containers:WorkArea id="workArea"
 					horizontalScrollPolicy="off" verticalScrollPolicy="off"
