git-svn-id: http://svn.vdombox.ru/flextools/trunk@1302 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -6,7 +6,7 @@
 	creationComplete="{creationComplete();}"
 	>
 			
-	<mx:Script source="FormController.as" />
+	<mx:Script source="ResourceBrowser_s.as" />
 	
 	<mx:VBox 
 		width="100%" height="100%"
