--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:TitleWindow 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
-	layout="absolute" width="640" height="480"
+	layout="absolute" width="800" height="600"
 	title="Resource Manager"
 	creationComplete="{creationComplete();}"
 	>
@@ -18,10 +18,11 @@
 	</mx:Tile>
 	<mx:HBox width="100%" height="100%">
 		<mx:Tile id="thumbsList"
-			width="120" height="100%" 
+			width="395" height="100%" 
 			direction="horizontal" borderStyle="solid"
 			verticalScrollPolicy="on" horizontalScrollPolicy="off"
 			horizontalAlign="center"
+			paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
 			/>
 			
 		<mx:Canvas id="previewCanvas" width="100%" height="100%" borderStyle="solid" />		
