--- a/IDE/Vdom/vdom/controls/resourceBrowser/Thumbnail.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/Thumbnail.mxml
@@ -9,24 +9,30 @@
 	>
 	
 	<mx:Image id="__thumb" width="100" height="100" verticalAlign="middle" horizontalAlign="center" />
-	<mx:Label id="__name" text="img"  width="100%" textAlign="center" />	
+	<mx:Label id="__name" text="img"  width="100" textAlign="center" />	
 	<mx:Script>
 		<![CDATA[
 		
 			import mx.controls.Image;
+			
+			private var __id:String;
 
 			public function set resource(data:Object):void {
-					__thumb.source = data.data;
+				__thumb.source = data.data;
 			}
 			
 			public function set text(text:String):void {
-				if (text.length >= 20) {
-					__name.text = text.substr(0, 20) + "...";	
-				} else {
-					__name.text = text;
-				}
+				__name.text = text;
 			}
-	
+
+			public function set objID(objID:String):void {
+				__id = objID;
+			}
+			
+			public function get objID():String {
+				return __id;
+			}	
+			
 		]]>
 	</mx:Script>
 
