--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -4,7 +4,7 @@
 	layout="absolute" width="800" height="600"
 	title="Resource Manager"
 	creationComplete="{creationComplete();}"
-	>
+	showCloseButton="true">
 			
 	<mx:Script source="ResourceBrowser_s.as" />
 	
