--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -4,33 +4,47 @@
 	layout="absolute" width="800" height="600"
 	title="Resource Manager"
 	creationComplete="{creationComplete();}"
-	showCloseButton="true">
-			
+	showCloseButton="true"
+	>
+
+	<!-- Main Class Scripting File -->			
 	<mx:Script source="ResourceBrowser_s.as" />
 	
 	<mx:VBox 
 		width="100%" height="100%"
 		paddingLeft="5" paddingBottom="5" paddingRight="5" paddingTop="5"
 		>
-	<mx:Label text="Content filter:" fontWeight="bold" />
-	<mx:Tile width="100%" verticalAlign="middle" id="filtersArea">
-		<!-- <mx:CheckBox id="jpegChkBox" label="Jpeg" /> -->
-	</mx:Tile>
-	<mx:HBox width="100%" height="100%">
-		<mx:Tile id="thumbsList"
-			width="395" height="100%" 
-			direction="horizontal" borderStyle="solid"
-			verticalScrollPolicy="on" horizontalScrollPolicy="off"
-			horizontalAlign="center"
-			paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
-			/>
+		<mx:HBox width="100%" height="30" cornerRadius="0" verticalAlign="middle">
+			<mx:HBox
+				backgroundColor="#FFF6EA" borderStyle="solid" 
+				cornerRadius="2" verticalAlign="middle"
+				paddingLeft="10" paddingRight="10"
+				>
+				<mx:RadioButton groupName="viewClass" label="Thumbnails"
+					id="thumbsRBtn" selected="true" click="{changeView();}" />
+				<mx:RadioButton groupName="viewClass" label="List"
+					id="listRBtn" click="{changeView();}" />
+			</mx:HBox>
+		</mx:HBox>
+		
+		<mx:DividedBox direction="horizontal" width="100%" height="100%" dividerRelease="{dividerRelease();}">
+			<mx:Tile id="thumbsList"
+				width="141" height="100%" minWidth="141" 
+				direction="horizontal" borderStyle="solid"
+				verticalScrollPolicy="on" horizontalScrollPolicy="off"
+				horizontalAlign="center"
+				paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
+				/>
+			<mx:VBox width="100%" height="100%" minWidth="375" borderStyle="solid" >
 			
-		<mx:Canvas id="previewCanvas" width="100%" height="100%" borderStyle="solid" />		
-	</mx:HBox>
-	<mx:HBox width="100%" horizontalAlign="right">
-		<mx:Button id="browseBtn" width="150" label="Browse / Add" />
-		<mx:Spacer width="100%" />
-		<mx:Button label="Done" click="{PopUpManager.removePopUp(this);}" />
-	</mx:HBox>
+				<mx:Canvas id="previewCanvas" width="100%" height="100%" />	
+			</mx:VBox>	
+		</mx:DividedBox>
+	
+		<mx:HBox width="100%" horizontalAlign="right">
+			<!-- <mx:Button id="browseBtn" width="150" label="Browse / Add" /> -->
+			<mx:Spacer width="100%" />
+			<mx:Button label="Done" click="{PopUpManager.removePopUp(this);}" />
+		</mx:HBox>
 	</mx:VBox>
 </mx:TitleWindow>
