--- a/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
@@ -21,6 +21,7 @@
 	</mx:VBox>
 	<mx:Script>
 		<![CDATA[
+			import mx.controls.Text;
 		
 			import mx.controls.Image;
 			
@@ -53,6 +54,10 @@
 					__selected = false;
 					this.setStyle('backgroundColor', "#FFF6EA");
 				}
+			}
+			
+			public function set imageSource(source:Object):void {
+				__image.source = source;
 			}
 			
 			public function get selected():Boolean {
