--- a/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
@@ -44,6 +44,10 @@
 				}
 			}
 			
+			public function set imageSource(source:Object):void {
+				__image.source = source;
+			}
+			
 			public function get selected():Boolean {
 				return __selected;
 			}
