--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -18,7 +18,7 @@
 		<mx:HBox
 			width="100%" height="30" cornerRadius="0"
 			verticalAlign="middle" paddingLeft="5" paddingRight="5"
-			backgroundColor="#e5e5e5"
+			backgroundColor="#e5e5e5" borderStyle="solid"
 			>
 			<mx:ButtonBar height="24" itemClick="{changeView(event);}">          			
 				<mx:Array>
@@ -27,11 +27,14 @@
 				</mx:Array>					
 			</mx:ButtonBar>
 			
+			<mx:Label text="Search:" fontWeight="bold" />
+			
 			<mx:HBox
 				backgroundColor="#FFF6EA" borderStyle="solid" 
-				cornerRadius="2" verticalAlign="middle"
-				paddingLeft="10" paddingRight="10" height="24" width="150"
+				cornerRadius="3" verticalAlign="middle"
+				paddingLeft="4" paddingRight="4" height="24" width="150"
 				>
+				<mx:TextInput width="100%" height="20" borderStyle="none" />
 			</mx:HBox>
 		</mx:HBox>
 		
@@ -43,8 +46,8 @@
 				horizontalAlign="center"
 				paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
 				/>
+				
 			<mx:VBox width="100%" height="100%" minWidth="375" borderStyle="solid" >
-
 				<mx:Canvas id="previewCanvas" width="100%" height="100%" />	
 			</mx:VBox>	
 		</mx:DividedBox>
