--- a/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
@@ -11,7 +11,9 @@
 	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*">
 	
 	<mx:Spacer height="50%" />
-	<resourceBrowser:SmoothImage id="__image" maxWidth="100" maxHeight="100" verticalAlign="middle" horizontalAlign="center" />
+	<resourceBrowser:SmoothImage id="__image" maxWidth="100" maxHeight="100"
+		verticalAlign="middle" horizontalAlign="center" maintainAspectRatio="true"
+		scaleContent="true" />
 	<mx:Spacer height="50%" />
 	<mx:HBox width="100" horizontalGap="0" horizontalScrollPolicy="off" verticalScrollPolicy="off">
 		<mx:Label id="__type" text="JPG:" textAlign="left" fontWeight="bold" />
