--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -4,8 +4,9 @@
 	layout="absolute" width="800" height="600"
 	title="Resource Manager"
 	creationComplete="{creationComplete();}"
-	showCloseButton="true"
-	>
+	showCloseButton="true" 
+	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*"
+>
 	
 	<!-- Main Class Scripting File -->			
 	<mx:Script source="ResourceBrowser_s.as" />
@@ -14,12 +15,13 @@
 		width="100%" height="100%"
 		paddingLeft="5" paddingBottom="5" paddingRight="5" paddingTop="5"
 		horizontalGap="3" verticalGap="3"
-		>
+	>
 		<mx:HBox
 			width="100%" height="30" cornerRadius="0"
 			verticalAlign="middle" paddingLeft="5" paddingRight="5"
 			backgroundColor="#e5e5e5" borderStyle="solid"
-			>
+		>
+			
 			<mx:ButtonBar height="24" itemClick="{changeView(event);}">          			
 				<mx:Array>
 					<mx:String id="tView">Thumbnails view</mx:String>
@@ -33,7 +35,7 @@
 				backgroundColor="#FFF6EA" borderStyle="solid" 
 				cornerRadius="3" verticalAlign="middle"
 				paddingLeft="4" paddingRight="4" height="24" width="150"
-				>
+			>
 				<mx:TextInput width="100%" height="20" borderStyle="none" />
 			</mx:HBox>
 		</mx:HBox>
@@ -45,14 +47,25 @@
 				verticalScrollPolicy="on" horizontalScrollPolicy="off"
 				horizontalAlign="center"
 				paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
-				/>
+			/>
 				
-			<mx:VBox width="100%" height="100%" minWidth="375" borderStyle="solid" >
-				<mx:Canvas id="previewCanvas" width="100%" height="100%" />	
+			<mx:VBox width="100%" height="100%" minWidth="375">
+				<mx:HBox width="100%" height="100%">
+					<mx:VBox id="filtersArea"
+						width="70" height="100%" borderStyle="solid" horizontalAlign="center"
+						paddingTop="5" paddingBottom="5"
+					/>
+	
+					<mx:HBox width="100%" height="30">
+				
+					</mx:HBox>				
+				</mx:HBox>	
 			</mx:VBox>	
 		</mx:DividedBox>
 	
-		<mx:HBox width="100%" horizontalAlign="right">
+		<mx:HBox width="100%" horizontalAlign="right" verticalAlign="middle">
+			<mx:Label text="Total Resources:" />
+			<mx:Label text="{_totalResources}" fontWeight="bold" />
 			<mx:Spacer width="100%" />
 			<mx:Button label="Done" click="{PopUpManager.removePopUp(this);}" />
 		</mx:HBox>
