git-svn-id: http://svn.vdombox.ru/flextools/trunk@1336 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
@@ -27,7 +27,9 @@
 			private var __id:String;
 			private var __selected:Boolean = false;
 
-			public function set resource(data:Object):void { __image.source = data.data; }
+			public function set resource(data:Object):void {
+				__image.source = data.data;
+			}
 			
 			public function set objName(text:String):void { __name.text = text; }
 
@@ -49,6 +51,10 @@
 			
 			public function set imageSource(source:Object):void {
 				__image.source = source;
+			}
+			
+			public function get imageSource():Object {
+				return __image.source;
 			}
 			
 			public function get selected():Boolean {
