--- a/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
@@ -63,7 +63,11 @@
 			public function set imageSource(source:Object):void {
 				__image.source = source;
 			}
-			
+
+			public function get imageSource():Object {
+				return __image.source;
+			}
+						
 			public function get selected():Boolean {
 				return __selected;
 			}
