--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -56,10 +56,25 @@
 						paddingTop="5" paddingBottom="5"
 					/>
 	
-					<mx:HBox width="100%" height="30">
-				
-					</mx:HBox>				
-				</mx:HBox>	
+					<mx:VBox width="100%" height="100%" verticalAlign="middle" verticalGap="2">
+						<mx:Label text="Resource Name:" />
+						<mx:HBox width="100%">
+							<mx:Label text="Resource Type:" />
+							<mx:Label id="__rType" text="" />
+							<mx:Label text="Image Resolution:" />
+							<mx:Label id="__iResolution" text="" />					
+						</mx:HBox>
+						
+						<mx:VBox width="100%" height="100%" verticalAlign="middle" horizontalAlign="center">
+							<mx:Box
+								borderStyle="solid" backgroundColor="#FFF6EA" cornerRadius="2"
+								paddingBottom="10" paddingLeft="10" paddingRight="10" paddingTop="10"
+							>
+								<mx:Image id="__largePreviw" horizontalAlign="center" verticalAlign="middle" />
+							</mx:Box>
+						</mx:VBox>
+					</mx:VBox>				
+				</mx:HBox>				
 			</mx:VBox>	
 		</mx:DividedBox>
 	
