--- a/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
@@ -21,21 +21,36 @@
 	</mx:HBox>
 	<mx:Script>
 		<![CDATA[
+			import mx.messaging.channels.StreamingAMFChannel;
 		
 			import mx.controls.Image;
 			
 			private var __id:String;
 			private var __selected:Boolean = false;
+			private var __objType:String = "";
 
-			public function set resource(data:Object):void {
-				__image.source = data.data;
+			public var imageWidth:int = 0;
+			public var imageHeight:int = 0;
+
+			public function set resource(source:Object):void {
+				__image.source = source.data;				
+				imageWidth = source.data.bitmapData.width;
+				imageHeight = source.data.bitmapData.height;
+				this.toolTip = imageWidth.toString() + "x" + imageHeight.toString();
 			}
 			
 			public function set objName(text:String):void { __name.text = text; }
 
 			public function set objID(objID:String):void { __id = objID; }
 			
-			public function set objType(objType:String):void { __type.text = objType.toUpperCase() + ":"; }
+			public function set objType(objType:String):void {
+				__type.text = objType.toUpperCase() + ":";
+				__objType = objType;
+			}
+			
+			public function get objType():String {
+				return __objType;
+			}
 			
 			public function get objID():String { return __id; }	
 			
