git-svn-id: http://svn.vdombox.ru/flextools/trunk@1339 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
@@ -45,6 +45,8 @@
 			}
 			
 			public function set objName(text:String):void { __name.text = text; }
+			
+			public function get objName():String { return __name.text; }
 
 			public function set objID(objID:String):void { __id = objID; }
 			
