--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -53,7 +53,7 @@
 				<mx:VBox width="100%" height="100%" verticalGap="2">
 					<mx:HBox width="100%">
 						<mx:Label text="Resource Name:" />
-						<mx:Label id="__rName" text="" fontWeight="bold" />
+						<mx:Label id="__rName" text="" fontWeight="bold" width="350" />
 					</mx:HBox>
 					<mx:HBox width="100%" verticalAlign="middle">
 						<mx:Label text="Resource Type:" />
