--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -52,21 +52,20 @@
 			<mx:VBox width="100%" height="100%" minWidth="375" horizontalScrollPolicy="off" verticalScrollPolicy="off">
 				<mx:VBox width="100%" height="100%" verticalGap="2">
 					<mx:HBox width="100%">
-						<mx:Label text="Resource Name:" />
-						<mx:Label id="__rName" text="" fontWeight="bold" width="350" />
+						<mx:Label text="Resource Name:"  width="110"/>
+						<mx:Box cornerRadius="3" backgroundColor="#FFF6EA" borderStyle="solid"><mx:Label id="__rName" text="" fontWeight="bold" width="300" /></mx:Box>
 					</mx:HBox>
 					<mx:HBox width="100%" verticalAlign="middle">
-						<mx:Label text="Resource Type:" />
-						<mx:Label id="__rType" text="" fontWeight="bold" />
+						<mx:Label text="Resource Type:"  width="110"/>
+						<mx:Box cornerRadius="3" backgroundColor="#FFF6EA" borderStyle="solid"><mx:Label id="__rType" text="" fontWeight="bold" /></mx:Box>
 						<mx:VRule height="18" />
 						<mx:Label text="Image Resolution:" />
-						<mx:Label id="__iResolution" text="" fontWeight="bold" />					
+						<mx:Box cornerRadius="3" backgroundColor="#FFF6EA" borderStyle="solid"><mx:Label id="__iResolution" text="" fontWeight="bold" /></mx:Box>					
 					</mx:HBox>
 					
 					<mx:VBox id="__previewArea" 
 						width="100%" height="100%"
 						verticalAlign="middle" horizontalAlign="center"
-						mouseOver="{__previewArea.toolTip = __previewArea.width.toString();}"
 					/>
 				</mx:VBox>				
 			</mx:VBox>	
